--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springcrud?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
